# stack-branch

./: .gitignore  .gstack_config.json  AGENTS.MD  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_PLAN.md  PLAN.MD  README.md  RUST_REWRITE_PLAN.md  TODO.MD  gstack.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
gstack/: __init__.py  exceptions.py  gh_ops.py  git_ops.py  main.py  models.py  stack_manager.py  workflow_engine.py
homebrew-tap/: README.md  update-formula.sh
homebrew-tap/Formula/: gs.rb  gstack.rb
scripts/: install.sh
tests/: __init__.py  conftest.py  test_cli.py  test_gh_ops.py  test_git_ops.py  test_models.py  test_smoke.py  test_stack_manager.py  test_workflow_engine.py
